--- a/git_bootstrap_les_chefs/src/scss/style.scss
+++ b/git_bootstrap_les_chefs/src/scss/style.scss
@@ -85,7 +85,7 @@ padding-left: -10px;
     
 }
 .ehm{display: flex;
-align-items: center;;
+align-items: center;
 margin: 0;}
 
 .why{
@@ -106,3 +106,12 @@ margin: 0;}
 position: absolute;
 margin-right: auto;
 }
+.center{
+    text-align: center;
+}
+.chefs{background-image: url(../../public/images/team_background.jpg);}
+
+.man{
+    background-image: url(../../public/images/book_table_bg.jpg);
+}
+
