--- a/git_bootstrap_les_chefs/public/css/style.css
+++ b/git_bootstrap_les_chefs/public/css/style.css
@@ -16114,6 +16114,7 @@ li {
 .ehm {
   display: flex;
   align-items: center;
+  margin: 0;
 }
 
 .why {
@@ -16123,6 +16124,30 @@ li {
 .menu {
   margin: 0;
   padding: 0;
+}
+
+.center {
+  text-align: center;
+}
+
+.chefs {
+  background-image: url(../../public/images/team_background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.man {
+  background-image: url(../../public/images/book_table_bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.trans {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.testi {
+  background-image: url(../../public/images/testimonials_background.jpg);
 }
 
 /*# sourceMappingURL=style.css.map */
