--- a/git_bootstrap_les_chefs/src/scss/_font.scss
+++ b/git_bootstrap_les_chefs/src/scss/_font.scss
@@ -4,3 +4,6 @@
 @font-face{font-family: "family";
 
 src: url('../../public/fonts/Flaticon.woff');}
+
+@font-face{font-family: cor;
+src:url('../../public/fonts/Courgette-Regular.ttf');}
